app2/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: wordpress-svc # Name of Service
  annotations:
    cloud.google.com/neg: '{"ingress": true}' # Creates a NEG after an Ingress is created
  namespace: wordpress
spec: # Service's specification
  type: ClusterIP
  selector:
    run: wordpress-app 
  ports:
    - port: 80
      name: wp1
      protocol: TCP
      targetPort: 80
    - port: 81
      name: wp2
      protocol: TCP
      targetPort: 80
